--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,14 @@
-.grid {
+main {
     display: flex;
     flex-wrap: wrap;
-    width: 450px;
-    height: 450px;
-    border: 3px dashed red;
-    padding: 0;
-    margin: 0;
+    justify-content: center;
+    gap: 150px;
 }
 
-.grid div {
-    box-sizing: border-box;
-    border: 1px solid orange;
+.left-container {
+    width: 200px;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    background-color: rgb(206, 20, 23);
 }
