--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,9 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-self: center;
     width: 225px;
-    height: 500px;
+    height: 450px;
     font-family:'Londrina Sketch', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 900;
     background-color: rgb(206, 27, 30);
@@ -66,13 +67,14 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
+    align-self: center;
     font-size: 28px;
     font-weight: 900;
 
 }
 
 #dimension {
-    width: 160px;
+    width: 300px;
 }
 
 #selector {
@@ -119,13 +121,11 @@ header {
 
 .knob-wrapper {
     display: flex;
-    justify-content: space-between;
-    column-gap: 450px;
-    margin-top: -20px;
+    column-gap: 80px;
+    margin-top: -30px;
 }
 
 .knob {
-    display: inline-block;
     box-sizing: border-box;
     width: 110px;
     height: 110px;
@@ -142,11 +142,15 @@ button:hover, .selector-wrapper:hover {
     width: 165px;
     height: 65px;
     font-family:'Londrina Sketch', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 28px;
+    font-size: 30px;
     font-weight: 900;
     color: rgb(197, 147, 57);
-    background-color: rgb(240, 239, 247);
     border: 4px solid rgb(163, 163, 163);
     border-radius: 10px;
     padding: 10px;
+}
+
+.pressed {
+    background-color: rgb(0, 0, 0);
+    border: 4px solid rgb(163, 163, 163);
 }
