finalized appearance and a few click events

--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,14 @@ main {
     gap: 100px;
 }
 
-.left-container {
+.left-container, .right-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     align-self: center;
     width: 225px;
-    height: 450px;
+    height: 350px;
     font-family:'Londrina Sketch', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 900;
     background-color: rgb(206, 27, 30);
@@ -25,6 +26,15 @@ main {
     padding: 20px 0;
 }
 
+.right-container {
+    box-sizing: border-box;
+    row-gap: 10px;
+    width: 700px;
+    height: 650px;
+    font-size: 28px;
+    margin-top: 20px;
+}
+
 .buttons-wrapper {
     display: flex;
     flex-direction: column;
@@ -32,7 +42,7 @@ main {
     gap: 25px;
 }
 
-button {
+button, button:hover, .selector-wrapper:hover {
     box-sizing: border-box;
     width: 160px;
     height: 60px;
@@ -44,6 +54,13 @@ button {
     border: 4px solid rgb(139, 0, 0);
     border-radius: 10px;
     padding: 10px;
+}
+
+button:hover, .selector-wrapper:hover {
+    width: 165px;
+    height: 65px;
+    font-size: 30px;
+    border: 4px solid rgb(163, 163, 163);
 }
 
 .selector-wrapper {
@@ -83,22 +100,6 @@ button {
     border: none;
 }
 
-.right-container {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    row-gap: 10px;
-    width: 700px;
-    height: 650px;
-    background-color: rgb(206, 27, 30);
-    color: rgb(197, 147, 57);
-    font-family:'Londrina Sketch', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 28px;
-    border: 4px solid rgb(139, 0, 0);
-    border-radius: 5%;
-}
-
 header {
     margin-top: -20px;
 }
@@ -135,19 +136,6 @@ header {
     border-right: 8px solid rgb(163, 163, 163);
     border-bottom: 8px solid rgb(204, 204, 204);
     border-left: 8px solid rgb(204, 204, 204);
-}
-
-button:hover, .selector-wrapper:hover {
-    box-sizing: border-box;
-    width: 165px;
-    height: 65px;
-    font-family:'Londrina Sketch', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 30px;
-    font-weight: 900;
-    color: rgb(197, 147, 57);
-    border: 4px solid rgb(163, 163, 163);
-    border-radius: 10px;
-    padding: 10px;
 }
 
 .pressed {
